2004-12-03  Dan Winship  <danw@novell.com>

	* en/Gtk/TextBuffer.xml: 
	* en/Gtk/TextView.xml: update for TextIter pass-by-ref changes

	* en/Gdk/Bitmap.xml: gone

	* en/Gdk/GC.xml:
	* en/Gdk/PangoAttrStipple.xml:
	* en/Gdk/Pixbuf.xml:
	* en/Gdk/Pixmap.xml:
	* en/Gdk/Window.xml:
	* en/Gtk/Drag.xml:
	* en/Gtk/Image.xml:
	* en/Gtk/TextAppearance.xml:
	* en/Gtk/Widget.xml: update for Gdk.Bitmap -> Gdk.Pixmap aliasing
	
2004-12-02 Shane Landrum <epicene@pobox.com>
	
	* en/Gtk/EntryCompletionMatchFunc.xml
	* en/Gtk/EntryCompletion.xml
	* en/Gtk/CellLayout.xml
	* en/Gtk/CellLayoutDataFunc.xml
	* en/Gtk/Clipboard.xml
	* en/Gtk/ClipboardTargetsReceivedFunc.xml
	* en/Gtk/FileFilter.xml
	* en/Gtk/FileFilterFlags.xml
	* en/Gtk/FileFilterFunc.xml: Doc some delegate classes and the
	methods that use them; mostly functionality new to 2.4.
	* en/Gtk/RBTreeTraverseFunc.xml
	* en/Gtk/TextSegLineChangeFunc.xml
	* en/Gtk/TextSegSplitFunc.xml
	* en/Gtk/TextSegCheckFunc.xml
	* en/Gtk/TextUtilCharChosenFunc.xml
	* en/Gtk/TextSegCleanupFunc.xml
	* en/Gtk/TextSegDeleteFunc.xml
	* en/Gtk/IconThemeFileLineFunc.xml: Removed extraneous TBAs.
	
2004-11-30  John Luke  <john.luke@gmail.com>

	* en/Gtk/FileChooserAction.xml:
	* en/Gtk/FileChooserError.xml:
	* en/Gtk/ComboBox.xml: doc some stuff

2004-11-30 Shane Landrum <epicene@pobox.com>

	* en/Gtk/ColorSelection.xml: Documented deprecated UpdatePolicy prop.
	* en/Gtk/ColorButton.xml: Added docs.
	* en/Gtk/TreeModel.xml
	* en/Gtk/TreeModelFilter.xml
	* en/Gtk/TreeModelFilterModifyFunc.xml
	* en/Gtk/TreeModelFilterVisibleFunc.xml
	* en/Gtk/TreeModelSort.xml: Added and elaborated docs
	for filtering tree models, in compliance with GTK 2.4.
	
2004-11-26  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* doc/en/Gtk/ActionEntry.xml:
	* doc/en/Gtk/ActionGroup.xml:
	* doc/en/Gtk/RadioActionEntry.xml:
	* doc/en/Gtk/ToggleActionEntry.xml:
	* doc/en/Gtk/UIManager.xml:
	
	New ActionEntry related structs & methods.

2004-11-18  Dan Winship  <danw@novell.com>
